force-app/main/default/objects/Lead/fields/Decision_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Decision_Timeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Timeline</label>
    <type>Checkbox</type>
</CustomField>