force-app/main/default/objects/Lead/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <inlineHelpText>used for datapacks</inlineHelpText>
    <label>external id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>