force-app/main/default/objects/Lead/fields/Has_Budget__c.field-meta.xml
<CustomField>
    <fullName>Has_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Budget</label>
    <type>Checkbox</type>
</CustomField>