force-app/main/default/objects/Lead/fields/Know_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Know_Decision_Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker</label>
    <type>Checkbox</type>
</CustomField>