force-app/main/default/objects/Lead/fields/Lead_Quality__c.field-meta.xml
<CustomField>
    <fullName>Lead_Quality__c</fullName>
    <formula>IF( Lead_Total__c &lt; 5,  IMAGE(&#39;/resource/Dollars/dollar_zero.png&#39;, &#39;zero&#39;) , 
 IF(Lead_Total__c &lt; 10, IMAGE(&#39;/resource/Dollars/dollar_one.png&#39;, &#39;one&#39;),
 IF(Lead_Total__c &lt; 15, IMAGE(&#39;/resource/Dollars/dollar_two.png&#39;, &#39;two&#39;) ,
 IF(Lead_Total__c &lt; 20, IMAGE(&#39;/resource/Dollars/dollar_three.png&#39;, &#39;three&#39;) ,
 IF(Lead_Total__c &lt; 25, IMAGE(&#39;/resource/Dollars/dollar_four.png&#39;, &#39;four&#39;) ,
 IMAGE(&#39;/resource/Dollars/dollar_five.png&#39;, &#39;five&#39;) ) ) ) ) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Quality</label>
    <type>Text</type>
</CustomField>