force-app/main/default/objects/Lead/fields/Lead_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rank__c</fullName>
    <formula>IF( (  Lead_Total__c  &gt;15),&quot;High Priority&quot;, IF(AND( Lead_Total__c  &lt;16, Lead_Total__c  &gt; 5),&quot;Medium Priority&quot;, &quot;Low Priority&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Priority</label>
    <type>Text</type>
</CustomField>