force-app/main/default/objects/Lead/fields/Lead_Total__c.field-meta.xml
<CustomField>
    <fullName>Lead_Total__c</fullName>
    <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>