force-app/main/default/objects/Lead/fields/Score3__c.field-meta.xml
<CustomField>
    <fullName>Score3__c</fullName>
    <formula>IF( Project_Defined__c = True, 5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Defined Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>